added mock tests for url checks